--- a/competencias.html
+++ b/competencias.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>PROBA – Competencias</title>
+  <title>MOMA – Competencias</title>
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -14,7 +14,7 @@
   <header>
     <div class="container nav-container">
       <a href="index.html" class="logo">
-        <img src="images/logo.png" alt="Logo PROBA">
+        <img src="images/logo.png" alt="Logo MOMA">
       </a>
       <nav>
         <ul>
@@ -104,7 +104,7 @@
               </ul>
             </li>
             <li><strong>Office</strong> – enlace a la prueba de Office o cuestionarios internos.</li>
-            <li><strong>Manejo de autos</strong> – vinculación con AS3 o simulador PROBA.</li>
+            <li><strong>Manejo de autos</strong> – vinculación con AS3 o simulador MOMA.</li>
             <li><strong>Manejo de armas de fuego</strong> – parámetros de medición de puntería y tiempo, evaluable desde celular.</li>
           </ul>
         </div>
@@ -116,7 +116,7 @@
   <!-- ====== FOOTER ====== -->
   <footer>
     <div class="container footer-content">
-      <p>© 2025 PROBA. Todos los derechos reservados.</p>
+      <p>© 2025 MOMA. Todos los derechos reservados.</p>
       <p>
          <a href="terminos.html" target="_blank">Términos y Condiciones</a>
          <img src="images/terminos.gif" alt="Términos y Condiciones" class="terminos-icon" />
