--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>PROBA – Contacto</title>
+  <title>MOMA – Contacto</title>
   <link rel="stylesheet" href="css/styles.css">
   <style>
     /* Estilos específicos para formulario de contacto */
@@ -72,7 +72,7 @@
   <!-- HEADER y NAV -->
   <header>
     <div class="container nav-container">
-      <a href="index.html" class="logo"><img src="images/logo.png" alt="Logo PROBA"></a>
+      <a href="index.html" class="logo"><img src="images/logo.png" alt="Logo MOMA"></a>
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
@@ -130,7 +130,7 @@
       <div class="contact-details">
         <p><img src="images/ubicacion.gif" alt="Ubicación" class="contact-icon"><strong>Dirección:</strong> Plaza de la Constitución S/N, Col. Centro, CDMX, 06000</p>
         <p><img src="images/telefono.gif" alt="Teléfono" class="contact-icon"><strong>Teléfono:</strong> +52 55 1234 5678</p>
-          <p><img src="images/email.gif" alt="Email" class="contact-icon"><strong>Email:</strong> contacto@proba.com.mx</p>
+          <p><img src="images/email.gif" alt="Email" class="contact-icon"><strong>Email:</strong> contacto@moma.com.mx</p>
       </div>
     </section>
   </main>
@@ -155,7 +155,7 @@
           </a></li>
         </ul>
       </div>
-      <p>© 2025 PROBA. Todos los derechos reservados.</p>
+      <p>© 2025 MOMA. Todos los derechos reservados.</p>
         <p>
          <a href="terminos.html" target="_blank">Términos y Condiciones</a>
          <img src="images/terminos.gif" alt="Términos y Condiciones" class="terminos-icon" />
