--- a/costos.html
+++ b/costos.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>PROBA – Costos</title>
+  <title>MOMA – Costos</title>
   <link rel="stylesheet" href="css/styles.css">
   <style>
     /* Estilos adicionales para tablas de costos y proyección */
@@ -36,7 +36,7 @@
 <body>
   <header>
     <div class="container nav-container">
-      <a href="index.html" class="logo"><img src="images/logo.png" alt="Logo PROBA"></a>
+      <a href="index.html" class="logo"><img src="images/logo.png" alt="Logo MOMA"></a>
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
@@ -131,7 +131,7 @@
             <rect x="200" y="340" width="140" height="30" fill="#A9A9A9" />
             <text x="270" y="360" fill="#fff" font-size="12" text-anchor="middle" alignment-baseline="middle">Vacantes</text>
 
-            <!-- Central PROBA logo container -->
+            <!-- Central MOMA logo container -->
             <rect x="400" y="140" width="200" height="80" fill="none" stroke="#000" stroke-width="2"/>
             <image href="images/logo.png" x="420" y="150" width="160" height="60" />
 
@@ -183,7 +183,7 @@
               <th>Servicio</th>
               <th>Precio Proveedor</th>
               <th>Cantidad</th>
-              <th>Precio PROBA</th>
+              <th>Precio MOMA</th>
               <th>Subtotal</th>
             </tr>
           </thead>
@@ -214,7 +214,7 @@
 
   <footer>
     <div class="container footer-content">
-      <p>© 2025 PROBA. Todos los derechos reservados.</p>
+      <p>© 2025 MOMA. Todos los derechos reservados.</p>
       <p>
          <a href="terminos.html" target="_blank">Términos y Condiciones</a>
          <img src="images/terminos.gif" alt="Términos y Condiciones" class="terminos-icon" />
