--- a/empresa.html
+++ b/empresa.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>PROBA – Empresa</title>
+  <title>MOMA – Empresa</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
   <body class="empresa-page">
@@ -13,7 +13,7 @@
   <header>
     <div class="container nav-container">
       <a href="index.html" class="logo">
-        <img src="images/logo.png" alt="Logo PROBA">
+        <img src="images/logo.png" alt="Logo MOMA">
       </a>
       <nav>
         <ul>
@@ -35,8 +35,8 @@
     <div class="grid-2">
 
       <!-- Columna izquierda -->
-        <!-- ¿Qué es PROBA? -->
-        <h2>¿Qué es PROBA?</h2>
+        <!-- ¿Qué es MOMA? -->
+        <h2>¿Qué es MOMA?</h2>
         <p>
           Es una poderosa herramienta informática que, previa autorización del afiliado, permite a las empresas y familias consultar resultados, acreditaciones de capacidades y actualización de información y pruebas de control de confianza de los afiliados para puestos domésticos y estratégicos o para posiciones sensibles por la información que tienen o la gestión que realizan, presentando la más baja probabilidad de cometer o involucrarse en situaciones de daño o incluso en comisión de delito.
         </p>
@@ -99,7 +99,7 @@
   <!-- ====== FOOTER ====== -->
   <footer>
     <div class="container footer-content">
-      <p>© 2025 PROBA. Todos los derechos reservados.</p>
+      <p>© 2025 MOMA. Todos los derechos reservados.</p>
       <p>
          <a href="terminos.html" target="_blank">Términos y Condiciones</a>
          <img src="images/terminos.gif" alt="Términos y Condiciones" class="terminos-icon" />
