--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>PROBA – Inicio</title>
+  <title>MOMA – Inicio</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
   <header>
     <div class="container nav-container">
       <a href="index.html" class="logo">
-        <img src="images/logo.png" alt="Logo PROBA" />
+        <img src="images/logo.png" alt="Logo MOMA" />
       </a>
       <nav>
         <ul>
@@ -33,7 +33,7 @@
   <!-- ====== HERO ====== -->
   <section class="hero">
     <div class="container hero-content">
-      <h1>Bienvenido a PROBA</h1>
+      <h1>Bienvenido a MOMA</h1>
       <p>Análisis de Integridad, Confianza y Capacidades para tu empresa o familia</p>
       <a href="empresa.html" class="btn btn-primary">Conoce más</a>
     </div>
@@ -51,7 +51,7 @@
       <div class="card">
          <img src="images/empresa.gif" alt="Empresas" />
         <h3>Empresas</h3>
-        <p>Publica vacantes, accede al portal PROBA y gestiona tus evaluaciones de personal.</p>
+        <p>Publica vacantes, accede al portal MOMA y gestiona tus evaluaciones de personal.</p>
         <a href="portafolio.html#recibe-empresa" class="btn btn-secondary">Ver detalles</a>
       </div>
       <div class="card">
@@ -83,7 +83,7 @@
           </a></li>
         </ul>
       </div>
-      <p>© 2025 PROBA. Todos los derechos reservados.</p>
+      <p>© 2025 MOMA. Todos los derechos reservados.</p>
       <p>
          <a href="terminos.html" target="_blank">Términos y Condiciones</a>
          <img src="images/terminos.gif" alt="Términos y Condiciones" class="terminos-icon" />
