--- a/intro.html
+++ b/intro.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>PROBA – Bienvenido</title>
+  <title>MOMA – Bienvenido</title>
   <link rel="stylesheet" href="css/styles.css">
   <script>
     if (!sessionStorage.getItem('introShown')) {
@@ -14,8 +14,8 @@
 </head>
 <body class="intro-page">
     <div id="intro-logo">
-    <img src="images/logo.png" alt="Logo PROBA">
-    <h1>PROBA</h1>
+    <img src="images/logo.png" alt="Logo MOMA">
+    <h1>MOMA</h1>
   </div>
    <script>
     window.addEventListener('load', function () {
@@ -33,3 +33,4 @@
   </script>
   </body>
 </html>
+
