--- a/portafolio.html
+++ b/portafolio.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>PROBA – Portafolio</title>
+  <title>MOMA – Portafolio</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
   <header>
     <div class="container nav-container">
       <a href="index.html" class="logo">
-        <img src="images/logo.png" alt="Logo PROBA">
+        <img src="images/logo.png" alt="Logo MOMA">
       </a>
       <nav>
         <ul>
@@ -39,16 +39,16 @@
         <!-- Lista completa de beneficios -->
         <div>
           <ul>
-            <li>Tarjeta de afiliación PROBA con su número PROBA (número de por vida).</li>
+            <li>Tarjeta de afiliación MOMA con su número PROBA (número de por vida).</li>
             <li>Notificaciones de re-validación de evaluaciones (con descuentos negociados con proveedores de evaluaciones).</li>
             <li>Invitaciones a cursos (con descuentos; hablamos con proveedores para gestionar tarifas reducidas).</li>
             <li>Notificaciones de vacantes de las empresas asociadas de acuerdo al puesto y actividad deseada.</li>
             <li>Promoción en vacantes de las empresas asociadas a través de nuestros canales.</li>
             <li>Evita costos de volver a aplicar exámenes.</li>
-            <li>Exposición como persona PROBA por nuestra promoción corporativa de beneficios.</li>
+            <li>Exposición como persona MOMA por nuestra promoción corporativa de beneficios.</li>
           </ul>
         </div>
-        <!-- Tarjetas PROBA -->
+        <!-- Tarjetas MOMA -->
         <div class="grid-3">
          <div class="zoom-container">
             <img class="zoomable" src="images/azul.jpg" alt="Tarjeta PROBA Clásica">
