--- a/privacidad.html
+++ b/privacidad.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>PROBA – Aviso de Privacidad</title>
+  <title>MOMA – Aviso de Privacidad</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
   <header>
     <div class="container nav-container">
       <a href="index.html" class="logo">
-        <img src="images/logo.png" alt="Logo PROBA">
+        <img src="images/logo.png" alt="Logo MOMA">
       </a>
       <nav>
         <ul>
@@ -39,11 +39,11 @@
     <p>En cumplimiento a lo establecido en los Lineamientos Generales de Protección de Datos Personales para el Sector Público, donde se establece la obligación de todos los sujetos obligados de habilitar en su portal institucional un apartado virtual denominado “Protección de Datos Personales”, y con base en lo dispuesto en la Ley General de Protección de Datos Personales en Posesión de los Sujetos Obligados, se habilita el apartado institucional de “Protección de Datos Personales” en PROBA.</p>
     <p>En términos de la Ley General de Protección de Datos Personales en Posesión de Sujetos Obligados, se pone a disposición de los titulares de los datos personales el Aviso de Privacidad relacionado con el tratamiento de datos personales realizado por PROBA.</p>
 
-    <p>En PROBA, con domicilio en [DIRECCIÓN COMPLETA], somos responsables del tratamiento de sus datos personales y nos comprometemos a proteger su privacidad conforme a lo establecido en la Ley Federal de Protección de Datos Personales en Posesión de los Particulares (LFPDPPP). Este aviso describe cómo recabamos, usamos, compartimos y protegemos su información.</p>
+    <p>En MOMA, con domicilio en [DIRECCIÓN COMPLETA], somos responsables del tratamiento de sus datos personales y nos comprometemos a proteger su privacidad conforme a lo establecido en la Ley Federal de Protección de Datos Personales en Posesión de los Particulares (LFPDPPP). Este aviso describe cómo recabamos, usamos, compartimos y protegemos su información.</p>
 
     <h3>Avisos de Privacidad</h3>
     <p>En términos de la Ley General de Protección de Datos Personales en Posesión de Sujetos Obligados, publicada en el Diario Oficial de la Federación el 26 de enero de 2017, se ponen a disposiciones de los titulares de los datos personales los Avisos de Privacidad relacionados con el tratamiento de datos personales realizado por PROBA.</p>
-    <p>En PROBA ponemos a su disposición nuestro Aviso de Privacidad en [HYPERVÍNCULO], de forma electrónica y, cuando sea solicitado, en versión impresa, para que pueda conocer toda la información sobre los datos que recabamos.</p>
+    <p>En MOMA ponemos a su disposición nuestro Aviso de Privacidad en [HYPERVÍNCULO], de forma electrónica y, cuando sea solicitado, en versión impresa, para que pueda conocer toda la información sobre los datos que recabamos.</p>
 
     <h3>Datos Personales que Recabamos</h3>
     <ul>
@@ -106,7 +106,7 @@
   <!-- FOOTER -->
   <footer>
     <div class="container footer-content">
-      <p>© 2025 PROBA. Todos los derechos reservados.</p>
+      <p>© 2025 MOMA. Todos los derechos reservados.</p>
       <p>
          <a href="terminos.html" target="_blank">Términos y Condiciones</a>
          <img src="images/terminos.gif" alt="Términos y Condiciones" class="terminos-icon" />
@@ -120,3 +120,4 @@
   </a>
 </body>
 </html>
+
