--- a/servicios.html
+++ b/servicios.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>PROBA – Servicios</title>
+  <title>MOMA – Servicios</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
   <header>
     <div class="container nav-container">
       <a href="index.html" class="logo">
-        <img src="images/logo.png" alt="Logo PROBA">
+        <img src="images/logo.png" alt="Logo MOMA">
       </a>
       <nav>
         <ul>
@@ -33,7 +33,7 @@
   <!-- ====== CONTENIDO PRINCIPAL ====== -->
   <main class="container section">
 
-   <h2>¿Qué analiza PROBA? <img src="images/analizar.gif" alt="¿Qué analiza PROBA?" class="analizar-icon"></h2>
+   <h2>¿Qué analiza MOMA? <img src="images/analizar.gif" alt="¿Qué analiza PROBA?" class="analizar-icon"></h2>
 
     <!-- Fila superior: tres columnas -->
     <div class="grid-3">
@@ -153,7 +153,7 @@
   <!-- ====== FOOTER ====== -->
   <footer>
     <div class="container footer-content">
-      <p>© 2025 PROBA. Todos los derechos reservados.</p>
+      <p>© 2025 MOMA. Todos los derechos reservados.</p>
       <p>
          <a href="terminos.html" target="_blank">Términos y Condiciones</a>
          <img src="images/terminos.gif" alt="Términos y Condiciones" class="terminos-icon" />
