--- a/terminos.html
+++ b/terminos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>PROBA – Términos y Condiciones</title>
+  <title>MOMA – Términos y Condiciones</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
   <header>
     <div class="container nav-container">
       <a href="index.html" class="logo">
-        <img src="images/logo.png" alt="Logo PROBA">
+        <img src="images/logo.png" alt="Logo MOMA">
       </a>
       <nav>
         <ul>
@@ -53,13 +53,13 @@
 
     <p>El usuario no deberá transferir los materiales a ningún tercero.</p>
 
-    <p>PROBA se reserva el derecho de suspender, interrumpir o dejar de operar el sitio y los servicios, en cualquier momento.</p>
+    <p>MOMA se reserva el derecho de suspender, interrumpir o dejar de operar el sitio y los servicios, en cualquier momento.</p>
   </main>
 
   <!-- FOOTER -->
   <footer>
     <div class="container footer-content">
-      <p>© 2025 PROBA. Todos los derechos reservados.</p>
+      <p>© 2025 MOMA. Todos los derechos reservados.</p>
       <p>
          <a href="terminos.html" target="_blank">Términos y Condiciones</a>
          <img src="images/terminos.gif" alt="Términos y Condiciones" class="terminos-icon" />
@@ -73,3 +73,4 @@
   </a>
 </body>
 </html>
+
