--- a/terminos.html
+++ b/terminos.html
@@ -31,7 +31,7 @@
 
   <!-- CONTENIDO PRINCIPAL -->
   <main class="container section">
-    <h2>Términos y Condiciones de Uso del Sitio PROBA</h2>
+    <h2>Términos y Condiciones de Uso del Sitio MOMA</h2>
     <p>La utilización de este sitio y de cualquiera de las aplicaciones del mismo constituye el pleno y expreso consentimiento por parte del usuario para observar y sujetarse respecto de cada uno de los términos y condiciones que aquí se contienen, así como respecto de las políticas de privacidad, políticas de seguridad y, en su caso, cualesquiera otros documentos que conformen parte o regulen la participación del usuario en este sitio. En el supuesto de que cualquiera de los términos a los que habrá de sujetarse el usuario cuando acceda a este sitio sean contrarios a sus intereses, deberá abstenerse de hacer uso del mismo.</p>
 
     <h3>Obligaciones del usuario</h3>
@@ -73,4 +73,5 @@
   </a>
 </body>
 </html>
+
 
