--- a/contacto.html
+++ b/contacto.html
@@ -72,7 +72,7 @@
   <!-- HEADER y NAV -->
   <header>
     <div class="container nav-container">
-      <a href="index.html" class="logo"><img src="images/logo.png" alt="Logo MOMA"></a>
+      <a href="index.html" class="logo"><img src="images/MOMA.jpg" alt="Logo MOMA"></a>
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
