--- a/costos.html
+++ b/costos.html
@@ -133,7 +133,7 @@
 
             <!-- Central MOMA logo container -->
             <rect x="400" y="140" width="200" height="80" fill="none" stroke="#000" stroke-width="2"/>
-            <image href="images/logo.png" x="420" y="150" width="160" height="60" />
+            <image href="images/MOMA.jpg" x="420" y="150" width="160" height="60" />
 
             <!-- Líneas de conexión -->
             <!-- Afiliado -> Evaluaciones (solid) -->
