--- a/intro.html
+++ b/intro.html
@@ -14,7 +14,7 @@
 </head>
 <body class="intro-page">
     <div id="intro-logo">
-    <img src="images/logo.png" alt="Logo MOMA">
+    <img src="images/MOMA.jpg" alt="Logo MOMA">
     <h1>MOMA</h1>
   </div>
    <script>
@@ -33,4 +33,5 @@
   </script>
   </body>
 </html>
+
 
