--- a/portafolio.html
+++ b/portafolio.html
@@ -13,7 +13,7 @@
   <header>
     <div class="container nav-container">
       <a href="index.html" class="logo">
-        <img src="images/logo.png" alt="Logo MOMA">
+        <img src="images/MOMA.jpg" alt="Logo MOMA">
       </a>
       <nav>
         <ul>
