--- a/terminos.html
+++ b/terminos.html
@@ -12,7 +12,7 @@
   <header>
     <div class="container nav-container">
       <a href="index.html" class="logo">
-        <img src="images/logo.png" alt="Logo MOMA">
+        <img src="images/MOMA.jpg" alt="Logo MOMA">
       </a>
       <nav>
         <ul>
@@ -73,5 +73,6 @@
   </a>
 </body>
 </html>
+
 
 
