--- a/contacto.html
+++ b/contacto.html
@@ -115,7 +115,12 @@
       <div class="g-recaptcha" data-sitekey="YOUR_RECAPTCHA_SITE_KEY" style="grid-column: span 2;"></div>
       <button type="submit" class="btn-submit">Enviar</button>
     </form>
-
+      
+ <section id="agendar" class="section">
+      <h2>Agenda una reunión</h2>
+      <div class="calendly-inline-widget" data-url="https://calendly.com/tuempresa" style="min-width:320px;height:630px;"></div>
+      <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
+    </section>
     <!-- NUEVA SECCIÓN DE UBICACIÓN Y DATOS DE CONTACTO -->
     <section id="ubicacion" class="section">
       <h2>Ubicación</h2>
