--- a/ciberseguridad.html
+++ b/ciberseguridad.html
@@ -20,6 +20,7 @@
           <li><a href="index.html">Inicio</a></li>
           <li><a href="empresa.html">Empresa</a></li>
           <li><a href="servicios.html">Servicios</a></li>
+          <li><a href="ciberseguridad.html">Ciberseguridad</a></li>
           <li><a href="ciberseguridad.html" class="active">Ciberseguridad</a></li>
           <li><a href="portafolio.html">Portafolio</a></li>
           <li><a href="competencias.html">Competencias</a></li>
@@ -123,3 +124,4 @@
   </a>
 </body>
 </html>
+
