--- a/contacto.html
+++ b/contacto.html
@@ -78,6 +78,7 @@
           <li><a href="index.html">Inicio</a></li>
           <li><a href="empresa.html">Empresa</a></li>
           <li><a href="servicios.html">Servicios</a></li>
+            <li><a href="ciberseguridad.html">Ciberseguridad</a></li>
           <li><a href="portafolio.html">Portafolio</a></li>
           <li><a href="competencias.html">Competencias</a></li>
           <li><a href="costos.html">Costos</a></li>
