--- a/costos.html
+++ b/costos.html
@@ -42,6 +42,7 @@
           <li><a href="index.html">Inicio</a></li>
           <li><a href="empresa.html">Empresa</a></li>
           <li><a href="servicios.html">Servicios</a></li>
+          <li><a href="ciberseguridad.html">Ciberseguridad</a></li>
           <li><a href="portafolio.html">Portafolio</a></li>
           <li><a href="competencias.html">Competencias</a></li>
           <li><a href="costos.html" class="active">Costos</a></li>
