--- a/terminos.html
+++ b/terminos.html
@@ -19,6 +19,7 @@
           <li><a href="index.html">Inicio</a></li>
           <li><a href="empresa.html">Empresa</a></li>
           <li><a href="servicios.html">Servicios</a></li>
+          <li><a href="ciberseguridad.html">Ciberseguridad</a></li>
           <li><a href="portafolio.html">Portafolio</a></li>
           <li><a href="competencias.html">Competencias</a></li>
           <li><a href="costos.html">Costos</a></li>
@@ -73,6 +74,7 @@
   </a>
 </body>
 </html>
+
 
 
 
