--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <section class="hero">
     <div class="container hero-content">
       <h1>Bienvenido a MOMA</h1>
-      <p>Análisis de Integridad, Confianza y Capacidades para tu empresa o familia</p>
+      Transformamos marcas desde adentro hacia afuera con estrategias humanas, tecnologicas y creativas.</p>
       <a href="empresa.html" class="btn btn-primary">Conoce más</a>
     </div>
   </section>
