--- a/competencias.html
+++ b/competencias.html
@@ -19,7 +19,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="empresa.html">Empresa</a></li>
+         <li><a href="nosotros.html">Nosotros</a></li>
           <li><a href="servicios.html">Servicios</a></li>
           <li><a href="portafolio.html">Portafolio</a></li>
           <li><a href="competencias.html" class="active">Competencias</a></li>
