--- a/costos.html
+++ b/costos.html
@@ -40,7 +40,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="empresa.html">Empresa</a></li>
+         <li><a href="nosotros.html">Nosotros</a></li>
           <li><a href="servicios.html">Servicios</a></li>
           <li><a href="ciberseguridad.html">Ciberseguridad</a></li>
           <li><a href="portafolio.html">Portafolio</a></li>
