--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav>
         <ul>
           <li><a href="index.html" class="active">Inicio</a></li>
-          <li><a href="empresa.html">Empresa</a></li>
+          <li><a href="Nosotros.html">Empresa</a></li>
           <li><a href="servicios.html">Servicios</a></li>
           <li><a href="ciberseguridad.html">Ciberseguridad</a></li>
           <li><a href="portafolio.html">Portafolio</a></li>
@@ -36,7 +36,7 @@
     <div class="container hero-content">
       <h1>Bienvenido a MOMA</h1>
       Transformamos marcas desde adentro hacia afuera con estrategias humanas, tecnologicas y creativas.</p>
-      <a href="empresa.html" class="btn btn-primary">Conoce más</a>
+      <a href="Nosotros.html" class="btn btn-primary">Conoce más</a>
     </div>
   </section>
 
@@ -47,7 +47,7 @@
         <img src="images/afiliado.jpg" alt="Afiliados" />
         <h3>Afiliados</h3>
         <p>Consulta tus evaluaciones, actualiza tu información y recibe notificaciones de vacantes.</p>
-        <a href="empresa.html#publico" class="btn btn-secondary">Ver detalles</a>
+        <a href="Nosotros.html#publico" class="btn btn-secondary">Ver detalles</a>
       </div>
       <div class="card">
          <img src="images/empresa.gif" alt="Empresas" />
