Update and rename empresa.html to nosotros.html

--- a/nosotros.html
+++ b/nosotros.html
@@ -1,13 +1,13 @@
-<!-- Archivo: empresa.html -->
+<!-- Archivo: nosotros.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MOMA – Empresa</title>
+  <title>MOMA – Nosotros</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
-  <body class="empresa-page">
+  <body class="Nosotros-page">
 
   <!-- ====== HEADER / NAV ====== -->
   <header>
@@ -18,7 +18,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="empresa.html" class="active">Empresa</a></li>
+          <li><a href="Nosotros.html" class="active">Empresa</a></li>
           <li><a href="servicios.html">Servicios</a></li>
           <li><a href="ciberseguridad.html">Ciberseguridad</a></li>
           <li><a href="portafolio.html">Portafolio</a></li>
