--- a/portafolio.html
+++ b/portafolio.html
@@ -18,7 +18,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="empresa.html">Empresa</a></li>
+          <li><a href="Nosotros.html">Empresa</a></li>
           <li><a href="servicios.html">Servicios</a></li>
           <li><a href="ciberseguridad.html">Ciberseguridad</a></li>
           <li><a href="portafolio.html" class="active">Portafolio</a></li>
