--- a/terminos.html
+++ b/terminos.html
@@ -17,7 +17,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="empresa.html">Empresa</a></li>
+          <li><a href="Nosotros.html">Empresa</a></li>
           <li><a href="servicios.html">Servicios</a></li>
           <li><a href="ciberseguridad.html">Ciberseguridad</a></li>
           <li><a href="portafolio.html">Portafolio</a></li>
@@ -74,6 +74,7 @@
   </a>
 </body>
 </html>
+
 
 
 
